--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,2 @@
 problemDetail.org.springframework.web.bind.MethodArgumentNotValidException=Validation error: {1}
+problemDetail.org.springframework.http.converter.HttpMessageNotReadableException=Failed to read request: {0}
